tests/expectations/compiler/option/input_output_fail.out
Error [ETYC0372164]: The input `x` has type `u8?`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:5:12
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |            ^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372164]: The input `y` has type `[u8?; 3]`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:5:20
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                    ^^^^^^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372164]: The input `f` has type `test.aleo/Foo`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:5:33
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                                 ^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `u8?`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:5:45
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                                             ^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372165]: This function has an output of type `u8?`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:5:50
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                                                  ^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372165]: This function has an output of type `test.aleo/Foo`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:5:55
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                                                       ^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `x` has type `u8?`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:9:12
     |
   9 |     fn bar(x: u8?, f: Foo) {
     |            ^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372164]: The input `f` has type `test.aleo/Foo`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:9:20
     |
   9 |     fn bar(x: u8?, f: Foo) {
     |                    ^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
